--- a/src/Identity/appsettings.json
+++ b/src/Identity/appsettings.json
@@ -5,5 +5,25 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Authentication": {
+    "DefaultScheme":  "LocalAuthIssuer",
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "https://localhost:5285",
+          "http://localhost:5285"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      },
+      "LocalAuthIssuer": {
+        "ValidAudiences": [
+          "https://localhost:7259",
+          "http://localhost:5259"
+        ],
+        "ValidIssuer": "local-auth"
+      }
+    }
+  }
 }
