--- a/src/Identity/appsettings.json
+++ b/src/Identity/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppIdentityDbContext": "Data Source=.;Initial Catalog=Identity; Persist Security Info=true; Application Name=Identity; Integrated Security = true;"
+  }
 }
