--- a/src/Identity/appsettings.json
+++ b/src/Identity/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppIdentityDbContext": "Data Source=.;Initial Catalog=Identity; Persist Security Info=true; Application Name=Identity; Integrated Security = true;"
+    "AppIdentityDbContext": "Server=.;Initial Catalog=Identity;Persist Security Info=False;User ID=sa;Password=123;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
+
