add lockout api

--- a/src/Identity/appsettings.json
+++ b/src/Identity/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppIdentityDbContext": "Server=.;Initial Catalog=Identity;Persist Security Info=False;User ID=sa;Password=123;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
-  }
+  },
+  "JWT": {
+    "Audience": "http://localhost:4200",
+    "Issuer": "http://localhost:5000",
+    "KEY": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  },
+  "MaxFailedAccessAttemptsBeforeLockout": "2"
 }
-
